Publish the Checkout Templates service for Velo
* Auto commit to autodocs-wix-ecom-backend from WixDocs Server

* Auto commit to autodocs-wix-ecom-backend from WixDocs Server

* Auto commit to autodocs-wix-ecom-backend from WixDocs Server

* Auto commit to autodocs-wix-ecom-backend from WixDocs Server

* Auto commit to autodocs-wix-ecom-backend from WixDocs Server

* Auto commit to autodocs-wix-ecom-backend from WixDocs Server

* Auto commit to autodocs-wix-ecom-backend from WixDocs Server

* Auto commit to autodocs-wix-ecom-backend from WixDocs Server

* Auto commit to autodocs-wix-ecom-backend from WixDocs Server

* Auto commit to autodocs-wix-ecom-backend from WixDocs Server

* Auto commit to autodocs-wix-ecom-backend from WixDocs Server

* Auto commit to autodocs-wix-ecom-backend from WixDocs Server

* Auto commit to autodocs-wix-ecom-backend from WixDocs Server

* Auto commit to autodocs-wix-ecom-backend from WixDocs Server

* Auto commit to autodocs-wix-ecom-backend from WixDocs Server

* Auto commit to autodocs-wix-ecom-backend from WixDocs Server

* Auto commit to autodocs-wix-ecom-backend from WixDocs Server

* Auto commit to autodocs-wix-ecom-backend from WixDocs Server

* Auto commit to autodocs-wix-ecom-backend from WixDocs Server

* Auto commit to autodocs-wix-ecom-backend from WixDocs Server

* Auto commit to autodocs-wix-ecom-backend from WixDocs Server

* Auto commit to autodocs-wix-ecom-backend from WixDocs Server

* Auto commit to autodocs-wix-ecom-backend from WixDocs Server

* Auto commit to autodocs-wix-ecom-backend from WixDocs Server

* Auto commit to autodocs-wix-ecom-backend from WixDocs Server

* Auto commit to autodocs-wix-ecom-backend from WixDocs Server

* Add intro for Checkout Templates

* Auto commit to autodocs-wix-ecom-backend from WixDocs Server

---------

Co-authored-by: AriGoldWix <95754543+AriGoldWix@users.noreply.github.com>

--- a/wix-ecom-backend/wix-ecom-backend/CheckoutSettings.service.json
+++ b/wix-ecom-backend/wix-ecom-backend/CheckoutSettings.service.json
@@ -548,6 +548,24 @@
       }
     },
     {
+      "name": "DeleteCheckoutSettingsRequest",
+      "members": [],
+      "docs": {
+        "description": [
+          ""
+        ]
+      }
+    },
+    {
+      "name": "DeleteCheckoutSettingsResponse",
+      "members": [],
+      "docs": {
+        "description": [
+          ""
+        ]
+      }
+    },
+    {
       "name": "DiffmatokyPayload",
       "members": [
         {
@@ -625,6 +643,15 @@
       }
     },
     {
+      "name": "Empty",
+      "members": [],
+      "docs": {
+        "description": [
+          ""
+        ]
+      }
+    },
+    {
       "name": "ErrorInformation",
       "members": [
         {
@@ -665,6 +692,36 @@
             }
           ],
           "doc": "Checkout settings."
+        }
+      ],
+      "docs": {
+        "description": [
+          ""
+        ]
+      }
+    },
+    {
+      "name": "GiftCardProviderWasProvisioned",
+      "members": [
+        {
+          "name": "providerAppDefId",
+          "optional": true,
+          "type": [
+            {
+              "nativeType": "string"
+            }
+          ],
+          "doc": "The gift card provider which was installed"
+        },
+        {
+          "name": "providerInstanceId",
+          "optional": true,
+          "type": [
+            {
+              "nativeType": "string"
+            }
+          ],
+          "doc": ""
         }
       ],
       "docs": {
