--- a/wix-application/wix-application.service.json
+++ b/wix-application/wix-application.service.json
@@ -1,7 +1,6 @@
 { "name": "wix-application",
   "mixes": [],
-  "labels":
-    [ "changed" ],
+  "labels": [],
   "location":
     { "lineno": 1,
       "filename": "application.js" },
@@ -67,8 +66,7 @@
         "extra":
           {  } },
       { "name": "getDecodedAppInstance",
-        "labels":
-          [ "changed" ],
+        "labels": [],
         "nameParams": [],
         "params": [],
         "ret":
