DocWorks for ecom-payment-settings - 3 changes detected, but 12 issue detected changes: Service ecom-payment-settings operation getConfig has changed return type Service ecom-payment-settings message PaymentSettings was removed Service ecom-payment-settings has a new message PaymentSettingsResponse
issues:
Operation getPaymentSettings has an unknown param type payment-settings.Options (payment-settings-spi.js (34))
Operation getPaymentSettings has an unknown return type payment-settings.Response (payment-settings-spi.js (34))
Browserslist: caniuse-lite is outdated. Please run:
  npx browserslist@latest --update-db
  Why you should do it regularly: https://github.com/browserslist/browserslist#browsers-data-updating
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.js line: 419
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.js line: 435
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.js line: 447
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.js line: 456
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.js line: 465
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.js line: 473
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.js line: 508
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.js line: 521
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: paym 

--- a/ecom-payment-settings/ecom-payment-settings.service.json
+++ b/ecom-payment-settings/ecom-payment-settings.service.json
@@ -54,7 +54,7 @@
           { "type":
               { "name": "Promise",
                 "typeParams":
-                  [ "ecom-payment-settings.PaymentSettings" ] },
+                  [ "ecom-payment-settings.PaymentSettingsResponse" ] },
             "doc": "Fulfilled - The configuration settings." },
         "locations":
           [ { "lineno": 1,
@@ -158,6 +158,23 @@
   "callbacks": [],
   "messages":
     [ { "name": "PaymentSettings",
+        "locations":
+          [ { "lineno": 29,
+              "filename": "payment-settings-spi.js" } ],
+        "docs":
+          { "links": [],
+            "examples": [],
+            "extra":
+              {  } },
+        "members":
+          [ { "name": "fallbackValueForRequires3dSecure",
+              "type": "boolean",
+              "doc": "The value to set for `paymentSettings.requires3dSecure` if the SPI call fails. Default: `false`" } ],
+        "extra":
+          {  },
+        "labels":
+          [ "removed" ] },
+      { "name": "PaymentSettingsResponse",
         "locations":
           [ { "lineno": 29,
               "filename": "payment-settings-spi.js" } ],
