DocWorks for ecom-payment-settings - 8 changes detected, but 12 issue detected changes: Service ecom-payment-settings has changed description Service ecom-payment-settings operation getConfig has changed return type Service ecom-payment-settings operation getPaymentSettings has changed return type Service ecom-payment-settings operation getPaymentSettings has changed description Service ecom-payment-settings message PaymentSettingsResponse member fallbackValueForRequires3dSecure was removed Service ecom-payment-settings message PaymentSettingsResponse has a new member requires3dSecure Service ecom-payment-settings has a new message PaymentSettingsConfigResponse Service ecom-payment-settings has a new message Options
issues:
Operation getPaymentSettings has an unknown param type payment-settings.Options (payment-settings-spi.js (38))
Message Options has an unknown property type ecom-payment-settings.Order (payment-settings-spi.js (62))
Browserslist: caniuse-lite is outdated. Please run:
  npx browserslist@latest --update-db
  Why you should do it regularly: https://github.com/browserslist/browserslist#browsers-data-updating
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.js line: 423
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.js line: 439
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.js line: 451
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.js line: 460
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.js line: 469
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.j 

--- a/ecom-payment-settings/ecom-payment-settings.service.json
+++ b/ecom-payment-settings/ecom-payment-settings.service.json
@@ -18,7 +18,8 @@
           "for certain payment methods. Note that each payment provider may have specific payment settings they accept with their Wix integration. ",
           "For example, [Tranzila](https://support.wix.com/en/article/connecting-tranzila-as-a-payment-provider) is a payment provider that ",
           "supports 3DS payments, but not all payment providers offer this feature. We recommend [contacting payment providers directly](https://support.wix.com/en/article/receiving-payouts-from-third-party-payment-providers) ",
-          "to confirm which payment settings they have implemented as part of their Wix integration.",
+          "to confirm which payment settings they have implemented as part of their Wix integration. Currently, the only payment setting available to customize ",
+          "is whether to apply 3DS to an order.",
           "",
           "## Configuration",
           "Adding a custom extension to your site has 3 steps:",
@@ -54,7 +55,7 @@
           { "type":
               { "name": "Promise",
                 "typeParams":
-                  [ "ecom-payment-settings.PaymentSettingsResponse" ] },
+                  [ "ecom-payment-settings.PaymentSettingsConfigResponse" ] },
             "doc": "Fulfilled - The configuration settings." },
         "locations":
           [ { "lineno": 1,
@@ -94,7 +95,8 @@
           { "customLabels":
               [ { "id": "maturity-beta" } ] } },
       { "name": "getPaymentSettings",
-        "labels": [],
+        "labels":
+          [ "changed" ],
         "nameParams": [],
         "params":
           [ { "name": "options",
@@ -104,7 +106,7 @@
           { "type":
               { "name": "Promise",
                 "typeParams":
-                  [ "payment-settings.Response" ] },
+                  [ "ecom-payment-settings.PaymentSettingsResponse" ] },
             "doc": "Fulfilled - Retrieved payment settings." },
         "locations":
           [ { "lineno": 38,
@@ -117,7 +119,7 @@
                 "**<your-extension-name>.js**.",
                 "",
                 "The second of these files, **<your-extension-name>.js**, is used to write the code to determine which payment settings to apply to an order. ",
-                "Currently, the only payment settings available to customize are whether to apply [3 domain security](https://support.wix.com/en/article/about-3d-secure-3ds-payments-with-third-party-payment-providers) (3DS) ",
+                "Currently, the only payment setting available to customize is whether to apply [3 domain security](https://support.wix.com/en/article/about-3d-secure-3ds-payments-with-third-party-payment-providers) (3DS) ",
                 "to an order. If the code fails, then `requires3dSecure` will be set to the value for `fallbackValueForRequires3dSecure` set in ",
                 "[`getConfig()`](https://www.wix.com/velo/reference/spis/ecom-payment-settings/getconfig).",
                 "",
@@ -157,7 +159,24 @@
               [ { "id": "maturity-beta" } ] } } ],
   "callbacks": [],
   "messages":
-    [ { "name": "PaymentSettings",
+    [ { "name": "Options",
+        "locations":
+          [ { "lineno": 62,
+              "filename": "payment-settings-spi.js" } ],
+        "docs":
+          { "links": [],
+            "examples": [],
+            "extra":
+              {  } },
+        "members":
+          [ { "name": "order",
+              "type": "ecom-payment-settings.Order",
+              "doc": "Order information." } ],
+        "extra":
+          {  },
+        "labels":
+          [ "new" ] },
+      { "name": "PaymentSettings",
         "locations":
           [ { "lineno": 29,
               "filename": "payment-settings-spi.js" } ],
@@ -174,7 +193,7 @@
           {  },
         "labels":
           [ "removed" ] },
-      { "name": "PaymentSettingsResponse",
+      { "name": "PaymentSettingsConfigResponse",
         "locations":
           [ { "lineno": 31,
               "filename": "payment-settings-spi.js" } ],
@@ -187,6 +206,23 @@
           [ { "name": "fallbackValueForRequires3dSecure",
               "type": "boolean",
               "doc": "The value to set for `paymentSettings.requires3dSecure` if the SPI call fails.\n\nDefault: `false`" } ],
+        "extra":
+          {  },
+        "labels":
+          [ "new" ] },
+      { "name": "PaymentSettingsResponse",
+        "locations":
+          [ { "lineno": 68,
+              "filename": "payment-settings-spi.js" } ],
+        "docs":
+          { "links": [],
+            "examples": [],
+            "extra":
+              {  } },
+        "members":
+          [ { "name": "requires3dSecure",
+              "type": "boolean",
+              "doc": "Whether to apply [3D Secure](https://support.wix.com/en/article/about-3d-secure-3ds-payments-with-third-party-payment-providers) during the payment process." } ],
         "extra":
           {  },
         "labels":
