DocWorks for ecom-payment-settings - 5 changes detected, but 13 issue detected changes: Service ecom-payment-settings message Options member order has changed type Service ecom-payment-settings message PaymentSettings member fallbackValueForRequires3dSecure was removed Service ecom-payment-settings message PaymentSettings has a new member requires3dSecure Service ecom-payment-settings message PaymentSettingsResponse member requires3dSecure was removed Service ecom-payment-settings message PaymentSettingsResponse has a new member paymentSettings
issues:
Operation getPaymentSettings has an unknown param type payment-settings.Options (payment-settings-spi.js (38))
Message Options has an unknown property type payment-settings.Order (payment-settings-spi.js (62))
Message PaymentSettingsResponse has an unknown property type payment-settings.PaymentSettings (payment-settings-spi.js (68))
Browserslist: caniuse-lite is outdated. Please run:
  npx browserslist@latest --update-db
  Why you should do it regularly: https://github.com/browserslist/browserslist#browsers-data-updating
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.js line: 429
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.js line: 445
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.js line: 457
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.js line: 466
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.js line: 475
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.js line: 483
ERROR: The @snippet tag - file 'velo-docs/e 

--- a/ecom-payment-settings/ecom-payment-settings.service.json
+++ b/ecom-payment-settings/ecom-payment-settings.service.json
@@ -44,8 +44,7 @@
   "properties": [],
   "operations":
     [ { "name": "getConfig",
-        "labels":
-          [ "changed" ],
+        "labels": [],
         "nameParams": [],
         "params":
           [ { "name": "fallbackValueForRequires3dSecure",
@@ -95,8 +94,7 @@
           { "customLabels":
               [ { "id": "maturity-beta" } ] } },
       { "name": "getPaymentSettings",
-        "labels":
-          [ "changed" ],
+        "labels": [],
         "nameParams": [],
         "params":
           [ { "name": "options",
@@ -170,15 +168,15 @@
               {  } },
         "members":
           [ { "name": "order",
-              "type": "ecom-payment-settings.Order",
+              "type": "payment-settings.Order",
               "doc": "Order information." } ],
         "extra":
           {  },
         "labels":
-          [ "new" ] },
+          [ "changed" ] },
       { "name": "PaymentSettings",
         "locations":
-          [ { "lineno": 29,
+          [ { "lineno": 74,
               "filename": "payment-settings-spi.js" } ],
         "docs":
           { "links": [],
@@ -186,13 +184,13 @@
             "extra":
               {  } },
         "members":
-          [ { "name": "fallbackValueForRequires3dSecure",
+          [ { "name": "requires3dSecure",
               "type": "boolean",
-              "doc": "The value to set for `paymentSettings.requires3dSecure` if the SPI call fails. Default: `false`" } ],
+              "doc": "Whether to apply [3D Secure](https://support.wix.com/en/article/about-3d-secure-3ds-payments-with-third-party-payment-providers) during the payment process." } ],
         "extra":
           {  },
         "labels":
-          [ "removed" ] },
+          [ "new" ] },
       { "name": "PaymentSettingsConfigResponse",
         "locations":
           [ { "lineno": 31,
@@ -208,8 +206,7 @@
               "doc": "The value to set for `paymentSettings.requires3dSecure` if the SPI call fails.\n\nDefault: `false`" } ],
         "extra":
           {  },
-        "labels":
-          [ "new" ] },
+        "labels": [] },
       { "name": "PaymentSettingsResponse",
         "locations":
           [ { "lineno": 68,
@@ -220,9 +217,9 @@
             "extra":
               {  } },
         "members":
-          [ { "name": "requires3dSecure",
-              "type": "boolean",
-              "doc": "Whether to apply [3D Secure](https://support.wix.com/en/article/about-3d-secure-3ds-payments-with-third-party-payment-providers) during the payment process." } ],
+          [ { "name": "paymentSettings",
+              "type": "payment-settings.PaymentSettings",
+              "doc": "Retrieved payment settings." } ],
         "extra":
           {  },
         "labels":
